Changes for 3.2.7rc1

New features:
...G...... [ZBXNEXT-3930] increased MaxLinesPerSecond limit and adjusted formula to process more lines per second (vso)

Bug fixes:
..F....... [ZBX-11277] fixed update in mass update form when inventory mode is not set explicitly (gcalenko)
..F....... [ZBX-12182] fixed missed page number in problems export (miks)
..F....... [ZBX-11309] fixed unchecked checkboxes after deleting script, mediatype or proxy (miks)
..F....... [ZBX-10999] fixed user's access level to display popup content (miks)
..F....... [ZBX-9213] removed link from uneditable template and host names in all configuration sections (miks)
..F....... [ZBX-6533] improved LDAP authentication module status check for authentication form (gcalenko)
..F....... [ZBX-12019] fixed incorrectly displayed calendar date in maintenance edit form (miks)
..F....... [ZBX-11304] fixed trigger wizard expressions sorting as well as wizard crash due incorrect expression removal (miks)
..F....... [ZBX-11585] fixed nested host group filter in top 100 triggers, item configuration list and dashboard widgets (miks)
A......... [ZBX-12023,ZBX-12133,ZBX-12225] fixed permissions and performance issues with event.get and problem.get methods (Sasha)
.......PS. [ZBX-12046] fixed handling of database failure during ID selection (vso)
..F....... [ZBX-11683] fixed problem with lost IDs of unlinkable templates (miks)
.......PS. [ZBX-12142] fixed Oracle batch insert return value (wiper)
..F....... [ZBX-11618] fixed displaying hints with no content inside (miks)
..F....... [ZBX-10546] fixed undefined index error in host import form while importing templates (gcalenko, Ivo)
..F....... [ZBX-11285] fixed cookie vulnerability for tabbed forms (gcalenko)
..F....... [ZBX-11486] fixed duplicated error messages in screens section (miks)
..F....... [ZBX-10807] fixed wrongly displayed field in item prototype form (miks)
..F....... [ZBX-11549] fixed 'numeric value' error in dashboard for php 7 (gcalenko, Sasha)