@@ -106,10 +106,13 @@ if ($data['interfaces']) {
 	else {
 		$interfacesComboBox = new CComboBox('interfaceid', $data['interfaceid']);
 
-		// set up interface groups
-		$interfaceGroups = [];
-		foreach (zbx_objectValues($data['interfaces'], 'type') as $interfaceType) {
-			$interfaceGroups[$interfaceType] = new COptGroup(interfaceType2str($interfaceType));
+		// Set up interface groups sorted by priority.
+		$interface_types = zbx_objectValues($this->data['interfaces'], 'type');
+		$interface_groups = [];
+		foreach ([INTERFACE_TYPE_AGENT, INTERFACE_TYPE_SNMP, INTERFACE_TYPE_JMX, INTERFACE_TYPE_IPMI] as $interface_type) {
+			if (in_array($interface_type, $interface_types)) {
+				$interface_groups[$interface_type] = new COptGroup(interfaceType2str($interface_type));
+			}
 		}
 
 		// add interfaces to groups
@@ -122,10 +125,10 @@ if ($data['interfaces']) {
 				($interface['interfaceid'] == $data['interfaceid']) ? 'yes' : 'no'
 			);
 			$option->setAttribute('data-interfacetype', $interface['type']);
-			$interfaceGroups[$interface['type']]->addItem($option);
+			$interface_groups[$interface['type']]->addItem($option);
 		}
-		foreach ($interfaceGroups as $interfaceGroup) {
-			$interfacesComboBox->addItem($interfaceGroup);
+		foreach ($interface_groups as $interface_group) {
+			$interfacesComboBox->addItem($interface_group);
 		}
 
 		$span = (new CSpan(_('No interface found')))
