@@ -1128,6 +1128,11 @@ if (isset($_REQUEST['form']) && str_in_array($_REQUEST['form'], [_('Create item'
 	$data['config'] = select_config();
 	$data['host'] = $host;
 
+	// Sort interfaces to be listed starting with one selected as 'main'.
+	CArrayHelper::sort($data['interfaces'], [
+		['field' => 'main', 'order' => ZBX_SORT_DOWN]
+	]);
+
 	if (hasRequest('itemid') && !getRequest('form_refresh')) {
 		$data['inventory_link'] = $item['inventory_link'];
 	}
@@ -1221,6 +1226,11 @@ elseif (((hasRequest('action') && getRequest('action') === 'item.massupdateform'
 
 		if ($hostCount == 1 && $data['displayInterfaces']) {
 			$data['hosts'] = reset($data['hosts']);
+
+			// Sort interfaces to be listed starting with one selected as 'main'.
+			CArrayHelper::sort($data['hosts']['interfaces'], [
+				['field' => 'main', 'order' => ZBX_SORT_DOWN]
+			]);
 
 			// if selected from filter without 'hostid'
 			if (!$data['hostid']) {
